samples/_failures_safe/1761087072_935ab5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_47558827.c:164:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  164 | void graph_print_bfs
      | ^~~~
